# tako

./: .gitignore  App_Manifest.yaml  Dockerfile  README.md  install.sh  installer.sh  setup.cfg  tako.py  takoserver  takoserverd.service
tako/: area.json  jma.py  names.py  point_meta.json  tako.py  takobot.py  takoclient.py  takoconfig.py  takodiscord.py  takomarket.py  takoslack.py  takotime.py  takozulip.py
tests/: takodebug.py  test_delete.py  test_detect_winner.py  test_installer.sh  test_jma.py  test_records.py  test_takoclient.py  test_takomarket.py  test_takoslack.py  test_takotime.py  test_takozulip.py
