[metadata]
name = takomarket
version = attr: tako.__version__
url = https://github/kumanofoo/takomarket
author = kumanofoo
description = Takoyaki Market
long_description = file: README.md
log_description_content_type = text/markdown
license = MIT
classifiers =
  Development Status :: 3
  Environment :: Console
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3

[options]
zip_safe = False
packages = find:

install_requires =
  beautifulsoup4
  requests
  slack_bolt

[options.package_data]
tako =
  area.json
  point_meta.json

[options.extras_require]
dev =
  pytest
  pytest-mock
  pytest-freezegun

[options.entry_points]
console_scripts =
  takomarket = tako.takomarket:tako_server
  takocmd = tako.takoclient:takocmd
  takobot = tako.takobot:main
  takoslackbot = tako.takoslack:main

[tool:pytest]
testpaths = tests
